--- a/blog/so_youre_learning_ocaml.org
+++ b/blog/so_youre_learning_ocaml.org
@@ -150,6 +150,15 @@ more recent contender called ~Containers~. For a categorized list of
 contemporary and well liked go to/must have libraries checkout the
 [[https://github.com/rizo/awesome-ocaml][awesome-ocaml]] repository.
 
+* Speaking of Libraries...
+This is "functional programming," so many of the real world libraries
+you'll encounter will have Monadic interfaces, like ~lwt~ or Core's
+~async~, both are asynchronous threading libraries, use Monads
+and that wacky ~>>=~ function. But you really shouldn't fret about
+what a Monad is or represents, just follow the type signature and
+you'll be fine. For a more detailed treatment of Monads in OCaml and a
+code example to talk to the ~Stripe~ API, see [[http://hyegar.com/blog/2015/09/23/let's-just-use-monads/][this]].
+
 * Doing simple tasks (shameless plug)
 I try using ~OCaml~ for literally everything and that includes going
 to hackathons, to make this less painful I wrote a library called
