--- a/blog/so_youre_learning_ocaml.org
+++ b/blog/so_youre_learning_ocaml.org
@@ -153,7 +153,7 @@ moon. There are a few standard library replacements, one is called
 *Real World OCaml* book/website. Another standard library replacement
 is called ~Batteries~, this is more "community" supported. There is a
 more recent contender called ~Containers~. For a categorized list of
-contemporary and well liked go to/must have libraries checkout the
+contemporary and well liked/must have libraries, checkout the
 [[https://github.com/rizo/awesome-ocaml][awesome-ocaml]] repository.
 
 * Speaking of Libraries...
@@ -195,11 +195,11 @@ The ~|>~ just means piping, its piping the output of
 #+BEGIN_SRC ocaml
 #require "podge"
 let () = 
-  Podge.Unix.read_process_output "code.ml" |> List.iter print_endline
+  Podge.Unix.read_lines "code.ml" |> List.iter print_endline
 #+END_SRC
 
-Similar to 1, this reads all lines of file and gives it to you as a
-list of strings.
+Similar to 1, this reads all lines of file and gives it to the input
+of the partially applied function ~iter~.
 
 These are two simple code samples from ~Podge~, check out the [[https://github.com/fxfactorial/podge][repo]]
 for other useful modules like: (The README has code examples)
